persoportfolio/src/app/sidecard/sidecard.component.scss
.profile-image {
  width: 160px;
  height: 160px;
  border: 4px solid white;
}

.card {
  background-color: #D7C49EFF;
  color: white;
  -webkit-font-smoothing: antialiased;
  border-radius: 20px 20px 20px 20px;
  border-color: transparent;
}

.side-card {
  position: -webkit-sticky;
  /* Safari */
  position: sticky;
  top: 5%;
}

li {
  cursor: pointer;
}

.active {
  color: red;
}

.overlay{
    z-index:9999;
    position: absolute;
    bottom:70%;
    top:15.5%;
    left:26%;
}

.text-center:hover{
    .profile-image{
        opacity: 50%;
        transition: .5s ease;
    }
}

.cursor{
    cursor: pointer;
}

